# playground

./: .gitignore  .gitmodules  README.md  README.txt
advent-of-code/: README.txt  build.lua
advent-of-code/aoc20/: day1.ts  day3.ts
advent-of-code/aoc21/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  main.rs
advent-of-code/aoc23/: day1.cpp  main.cpp
advent-of-code/aoc24/: common.c  common.h  day1.c  day2.c  day3.c  day4.c  main.c
advent-of-code/cpp/: CMakeLists.txt
advent-of-code/cpp/src/aoc23/: day1.cpp
advent-of-code/rust/aoc21/src/: day4.rs  main.rs
advent-of-code/typescript/aoc20/: package-lock.json
advent-of-code/typescript/aoc20/src/: day2.ts  day4.ts
aoc/: README.md
aoc/rust/aoc21/src/: day1.rs  day2.rs  day3.rs  day5.rs  day6.rs  day7.rs
aoc/typescript/aoc20/: .eslintrc.js  log.txt  package.json  test.txt  tsconfig.json
aoc/typescript/aoc20/src/: main.ts
cpp/game-of-life/: .clang-format  CMakeLists.txt
cpp/game-of-life/src/: main.cpp
euler/: README.md
euler/haskell/prob1/: mult35.hs
euler/haskell/prob10/: sumBelow.hs
euler/haskell/prob2/: evenFib.hs
euler/haskell/prob3/: maxFac.hs
euler/haskell/prob6/: diffSq.hs
euler/haskell/prob7/: 10001prime.hs
euler/haskell/prob8/: largeProd
game-of-life/: README.md  README.txt
graphics/: .clang-format  CMakeLists.txt
graphics/src/: triforce.cpp
learn-you-node/: README.md
learn-you-node/solutions/: baby-steps.js  http-client.js  http-file-server.js  juggling-async.mjs  my-first-async-io.js  my-first-io.js
learnyounode/: package-lock.json  package.json
learnyounode/solutions/: baby-steps.js  filtered-ls.js  http-collect.mjs  http-json.js  http-uppercaserer.js  make-it-modular.js  mymodule.js  time-server.mjs
problems/: CMakeLists.txt  README.md  README.txt  build.lua  common.hpp
problems/easy/: best_time_to_buy_and_sell_stock.cpp  binary_search.cpp  duplicate_integer.cpp  is_anagram.cpp  two_sum.cpp  two_sum_2.cpp  unique_elements.cpp  valid_palindrome.cpp  valid_parentheses.cpp
problems/hard/: minimum_window_substring.cpp  sliding_window_maximum.cpp  trapping_rain_water.cpp
problems/include/: binary_tree.hpp  common.hpp
problems/medium/: anagram_groups.cpp  binary_tree_implementation_test.cpp  car_fleet.cpp  container_with_most_water.cpp  encode_decode_strings.cpp  evaluate_reverse_polish_notation.cpp  generate_parentheses.cpp  koko_eating_bananas.cpp  longest_consecutive.cpp  longest_repeating_character_replacement.cpp  longest_substring_with_unique_characters.cpp  lru_cache.cpp  minimum_stack.cpp  permutation_in_string.cpp  product_except_self.cpp  search_in_2d_matrix.cpp  string_to_integer.cpp  task_scheduler.cpp  three_sum.cpp  top_k_frequent.cpp  valid_sudoku.cpp
project-euler/haskell/prob4/: maxPali.hs
project-euler/haskell/prob5/: smallNum.hs
project-euler/haskell/prob8/: largeProd.hs
scripts/sales-repl/: README.md  README.txt  sales.py
